--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,7 @@
 [build]
-builder = DOCKERFILE
-dockerfilePath = backend/Dockerfile
+builder = "DOCKERFILE"
+dockerfilePath = "backend/Dockerfile"
 
 [deploy]
-startCommand = npm start
-healthcheckPath = /health
+startCommand = "npm start"
+healthcheckPath = "/health"
